# matrix-multipurpose-bot

./: .envrc.example  .gitignore  LICENSE  README.md  bot-config-example.json  default.nix  matrix-bot.cabal  stack.yaml
app/: Main.hs
nix/: sources.json
src/MatrixBot/: AesonUtils.hs  App.hs  Auth.hs  Bot.hs  Log.hs  MatrixApi.hs  Options.hs  SharedTypes.hs
src/MatrixBot/Bot/: BotConfig.hs  BotM.hs  EventsListener.hs  Retry.hs  SmokeTest.hs
src/MatrixBot/Bot/EventsListener/: Filters.hs
src/MatrixBot/Bot/EventsListener/Handlers/: ReactToUsers.hs  ReplyToMedia.hs
src/MatrixBot/Bot/Jobs/: BotJob.hs  Log.hs  Queue.hs
src/MatrixBot/Bot/Jobs/Handlers/: MainHandler.hs  SendMessage.hs  SendReaction.hs
src/MatrixBot/MatrixApi/: Client.hs
src/MatrixBot/MatrixApi/Types/: MEventTypes.hs
